--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -8,7 +8,7 @@ framework:
     profiler: { only_exceptions: false }
 
 web_profiler:
-    toolbar: false
+    toolbar: %debug_toolbar%
     intercept_redirects: %debug_redirects%
 
 monolog:
