--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,7 +36,8 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ ]
+    bundles:        
+        - ExtranetAngularBundle
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
@@ -44,7 +45,7 @@ assetic:
         #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
         #yui_css:
         #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
-
+                
 # Doctrine Configuration
 doctrine:
     dbal:
